{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 84,
  "lineage": "fc4af678-e744-d67e-d602-a5fc3e414cee",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:security-group/sg-0c645dc023852e4ef",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c645dc023852e4ef",
            "ingress": [],
            "name": "voice-kuberay-cluster-cluster-2025032014230335810000000e",
            "name_prefix": "voice-kuberay-cluster-cluster-",
            "owner_id": "975226449092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "voice-kuberay-cluster-cluster"
            },
            "tags_all": {
              "Name": "voice-kuberay-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:security-group/sg-0d062b9e407c6a23c",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0d062b9e407c6a23c",
            "ingress": [],
            "name": "voice-kuberay-cluster-node-2025032014230335720000000d",
            "name_prefix": "voice-kuberay-cluster-node-",
            "owner_id": "975226449092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "voice-kuberay-cluster-node",
              "kubernetes.io/cluster/voice-kuberay-cluster": "owned"
            },
            "tags_all": {
              "Name": "voice-kuberay-cluster-node",
              "kubernetes.io/cluster/voice-kuberay-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-887954392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c645dc023852e4ef",
            "security_group_rule_id": "sgr-0fa0e4fe3cf179cec",
            "self": false,
            "source_security_group_id": "sg-0d062b9e407c6a23c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-587353893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0f92a4bf8a2c483e3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-213994501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0c995ddd1bff795ab",
            "self": false,
            "source_security_group_id": "sg-0c645dc023852e4ef",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3578711128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0657b90566a1e10b5",
            "self": false,
            "source_security_group_id": "sg-0c645dc023852e4ef",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-470592462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-05f61b99df82bcc23",
            "self": false,
            "source_security_group_id": "sg-0c645dc023852e4ef",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-256940015",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0c2e6eef876e5d00a",
            "self": false,
            "source_security_group_id": "sg-0c645dc023852e4ef",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1810998308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-06ef73a3256780659",
            "self": false,
            "source_security_group_id": "sg-0c645dc023852e4ef",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2357551712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-06b59bb5741354dfe",
            "self": false,
            "source_security_group_id": "sg-0c645dc023852e4ef",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-51629122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0158f22d6d0aa5725",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2383923642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0a30c8b4445777637",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-709388885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d062b9e407c6a23c",
            "security_group_rule_id": "sgr-0b8ed53cb627f85c2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:network-acl/acl-026023de947c99f15",
            "default_network_acl_id": "acl-026023de947c99f15",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-026023de947c99f15",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "975226449092",
            "subnet_ids": null,
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-default",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-default",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:route-table/rtb-0a527b3da54e20772",
            "default_route_table_id": "rtb-0a527b3da54e20772",
            "id": "rtb-0a527b3da54e20772",
            "owner_id": "975226449092",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-default",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-default",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:security-group/sg-005c3fcb93ee84af0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-005c3fcb93ee84af0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "975226449092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-default",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-default",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d8937bcde57245d",
            "arn": "arn:aws:ec2:us-east-1:975226449092:elastic-ip/eipalloc-06d8937bcde57245d",
            "domain": "vpc",
            "id": "eipalloc-06d8937bcde57245d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-64-225.compute-1.amazonaws.com",
            "public_ip": "34.237.64.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:internet-gateway/igw-03c5d69dce1e45970",
            "id": "igw-03c5d69dce1e45970",
            "owner_id": "975226449092",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d8937bcde57245d",
            "association_id": "eipassoc-0af43773c98ee1466",
            "connectivity_type": "public",
            "id": "nat-0ede47ca4d87eb44c",
            "network_interface_id": "eni-0adb337e0d9e8a53e",
            "private_ip": "10.10.48.167",
            "public_ip": "34.237.64.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067e5a9f68f709839",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b84a7ae6d43854661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ede47ca4d87eb44c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c5d69dce1e45970",
            "id": "r-rtb-0212db4e4e5a5a49a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0212db4e4e5a5a49a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:route-table/rtb-0b84a7ae6d4385466",
            "id": "rtb-0b84a7ae6d4385466",
            "owner_id": "975226449092",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:route-table/rtb-0212db4e4e5a5a49a",
            "id": "rtb-0212db4e4e5a5a49a",
            "owner_id": "975226449092",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e31a8bea801de65e",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "subnet_id": "subnet-0474ee32bc20b58e5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b67f4e2e02229ffd",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "subnet_id": "subnet-06bbf12bf06bbfbbc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e29430840d1895d",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "subnet_id": "subnet-0fdcd23fc790a05f1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d6b9ed5ecd0ce36",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "subnet_id": "subnet-0474e8a1b56d39f4a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054f8d48b9e51a4c9",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "subnet_id": "subnet-0a8a4998e4d71e98e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abbb1f42e017fb5b",
            "route_table_id": "rtb-0b84a7ae6d4385466",
            "subnet_id": "subnet-034071dd35aae2a6a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1fee755b9ab1ff",
            "route_table_id": "rtb-0212db4e4e5a5a49a",
            "subnet_id": "subnet-067e5a9f68f709839"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076e2b668f256128d",
            "route_table_id": "rtb-0212db4e4e5a5a49a",
            "subnet_id": "subnet-0433eea1f746e3cc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084a9c69fded42d02",
            "route_table_id": "rtb-0212db4e4e5a5a49a",
            "subnet_id": "subnet-0fd2ddd7d294c9ef7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-0474ee32bc20b58e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0474ee32bc20b58e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-06bbf12bf06bbfbbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbf12bf06bbfbbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1b",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1b",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-0fdcd23fc790a05f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdcd23fc790a05f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1c",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1c",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-0474e8a1b56d39f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.64.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0474e8a1b56d39f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-0a8a4998e4d71e98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "100.64.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8a4998e4d71e98e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1b",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1b",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-034071dd35aae2a6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "100.64.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034071dd35aae2a6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1c",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-private-us-east-1c",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-067e5a9f68f709839",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067e5a9f68f709839",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public-us-east-1a",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-0433eea1f746e3cc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0433eea1f746e3cc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public-us-east-1b",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public-us-east-1b",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:subnet/subnet-0fd2ddd7d294c9ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd2ddd7d294c9ef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975226449092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public-us-east-1c",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster-public-us-east-1c",
              "karpenter.sh/discovery": "voice-kuberay-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:vpc/vpc-0eae727a14fd4f9b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-026023de947c99f15",
            "default_route_table_id": "rtb-0a527b3da54e20772",
            "default_security_group_id": "sg-005c3fcb93ee84af0",
            "dhcp_options_id": "dopt-0ccd3ef0278973016",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eae727a14fd4f9b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a527b3da54e20772",
            "owner_id": "975226449092",
            "tags": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            },
            "tags_all": {
              "Blueprint": "voice-kuberay-cluster",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "voice-kuberay-cluster",
              "karpenter.sh/discovery": "voice-kuberay-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:vpc-endpoint/vpce-099f157419555ca52",
            "dns_entry": [
              {
                "dns_name": "vpce-099f157419555ca52-xl2jymh1.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-099f157419555ca52-xl2jymh1-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0317407NLKSN68F2XL7"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z06639251AG4KHQ0OYMEE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-099f157419555ca52",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b73fc1ab5a61371c"
            ],
            "owner_id": "975226449092",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-005c3fcb93ee84af0"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.12.196",
                "subnet_id": "subnet-0474ee32bc20b58e5"
              }
            ],
            "subnet_ids": [
              "subnet-0474ee32bc20b58e5"
            ],
            "tags": {
              "Name": "voice-kuberay-cluster-ecr-api"
            },
            "tags_all": {
              "Name": "voice-kuberay-cluster-ecr-api"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:vpc-endpoint/vpce-0148ca25ed5b990db",
            "dns_entry": [
              {
                "dns_name": "vpce-0148ca25ed5b990db-q6l4licc.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0148ca25ed5b990db-q6l4licc-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07775982T0L0DCG1N5MX"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07775982T0L0DCG1N5MX"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z06661741A0TXG58TCL07"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z06661741A0TXG58TCL07"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0148ca25ed5b990db",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08050eeebab0cd752"
            ],
            "owner_id": "975226449092",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-005c3fcb93ee84af0"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.7.24",
                "subnet_id": "subnet-0474ee32bc20b58e5"
              }
            ],
            "subnet_ids": [
              "subnet-0474ee32bc20b58e5"
            ],
            "tags": {
              "Name": "voice-kuberay-cluster-ecr-dkr"
            },
            "tags_all": {
              "Name": "voice-kuberay-cluster-ecr-dkr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975226449092:vpc-endpoint/vpce-096917eedf540fabb",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-096917eedf540fabb",
            "owner_id": "975226449092",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b84a7ae6d4385466"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "voice-kuberay-cluster-s3"
            },
            "tags_all": {
              "Name": "voice-kuberay-cluster-s3"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0eae727a14fd4f9b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}